# mafia

./: README.md  agents.py  api.py  config.py  game_config.yaml  game_engine.py  main.py  play.py  prompts.py  pyproject.toml  test_streaming.py
src/: agents.py  api.py  config.py  game_engine.py  play.py  prompts.py
